public/stylesheet/style.css
/* ---------- Font Import ------------ */
@import url('https://fonts.googleapis.com/css?family=Poppins:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i');


/* ---------- Icons ------------ */
.med-icon {
    font-size: 5em;
}

.playing-card {
    background: #c76262;
    border-radius: 2px;
    width: 10px;
    height: 20px;
}

/* ---------- Global ------------ */
body {
  margin: 0;
  padding: 0;
  font-family: 'Poppins';
}

div#root {
  height: 100vh;
}

button {
    cursor: pointer;
}

button:focus {
    outline: none;
}

.hidden {
    margin-left: -226px !important;
}

.hamburger-button {
    font-size: 28px;
    position: absolute;
    top: 20px;
    left: 20px;
    border: none;
    transition: .2s ease-in-out;
}

.hamburger-button:hover {
    color: #51cd98;
}

.help-button {
    font-size: 28px;
    position: absolute;
    top: 20px;
    right: 11vw;
    border: none;
    transition: .2s ease-in-out;
}

.help-button:hover {
    color: #51cd98;
}

.menu-open {
    transform: rotate(90deg);
}

input:focus {
    outline: #5ece98 auto 5px;
}

.main-window {
    flex: auto;
    display: flex;
    width: 100%;
}

.bottom-container {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: space-evenly;
    height: 20vh;
    background: #1c2227;
    align-items: flex-end;
    width: 100%;
    border-top: solid 5px #9bce5e;
}


/* ---------- Parent Form ------------ */
.parent-form {
    display: flex;
    flex-direction: row;
    height: 100vh;
    position: relative;
}

.parent-form-menu > [class^="parent-form-"] {
    border-bottom: 2px solid #464646;
}

.parent-form-title-container {
    display: flex;
    align-items: center;
}

.parent-form-title-container .parent-form-menu-icon {
    color: #5ece98;
    font-size: 29px;
}

.parent-form-menu-section-title-container {
    display: flex;
    align-items: center;
    color: #ababab;
    cursor: pointer;
    transition: .1s ease-in-out;
}

.parent-form-menu-section-title-container:hover {
    background: #424242;
    color: #fff;
}

.parent-form-menu-title {
    margin-left: 10px;
    padding: 20px 20px 20px 0px;
}

.parent-form-menu-section-title-container .parent-form-menu-icon {
    color: #b3b3b3;
}

.parent-form-menu-section-title-container .parent-form-menu-icon {
    font-size: 20px;
}

.parent-form .parent-form-menu-section-title {
    color: #ffffff;
    margin-bottom: 30px;
    font-size: 16px;
    font-weight: 400;
}

.parent-form-menu-icon {
    width: 40px;
    text-align: center;
}

.parent-form-menu-title {
    margin-left: 10px;
}

.parent-form-game-title {
    font-size: 29px;
    color: #51cd98;
    font-weight: 700;
    text-transform: uppercase;
    margin-left: 18px;
}

.parent-form-game-title {
    font-size: 2em;
    color: #51cd98;
    font-weight: 700;
    text-transform: uppercase;
    margin-left: 10px;
}

.menu-box.bottom-border {
    border-bottom: 2px solid #464646;
}

.menu-box {
    padding: 20px;
}

.parent-form-menu-phases, 
.parent-form-menu-options {
    font-size: 13px;
    letter-spacing: .5px;
    font-weight: 200;
}

.parent-form-menu-phase-group {
    display: flex;
    flex-direction: row;
    align-items: center;
}

.source-title {
    color: #2fe48d;
}

.parent-form-menu-phase-icon {
    width: 40px;
    text-align: center;
    font-size: 19px;
    color: #b3b3b3;
    font-weight: 900;
}

.parent-form .parent-form-menu-section-container {
    background: #1c2228;
}

.parent-form-menu-options.phase-container:not(:first-child) {
    margin-top: 40px;
}

.parent-form-menu {
    background: #2d2d2d;
    color: #ababab;
    transition: .2s ease-in-out;
    height: 100vh;
    overflow-x: auto;
    position: relative;
    margin-left: 0px;
    width: 226px;
}

.parent-form-main {
    display: flex;
    flex-direction: column;
    align-items: center;
    flex: auto;
    position: relative;
}

.parent-form-right {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  flex-wrap: wrap;
  height: 100%;
}

.parent-form-next {
    display: flex;
    align-items: center;
    font-size: 10vh;
    background: #5ece98;
    border-left: #258e5b 5px solid;
    color: #fff;
    padding: 20px;
}

.parent-form-right-title {
    font-size: 7em;
    color: #51cd98;
    font-weight: 700;
    width: 100%;
    text-align: center;
    margin-bottom: 30px;
}

.parent-form-right-title input {
    font-size: 1em;
    color: #51cd98;
    font-weight: 700;
    width: 80%;
    text-align: center;
    margin-bottom: 30px;
    border: 0px;
    font-family: 'Poppins';
}

.starting-rules {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    flex-wrap: wrap;
    flex: auto;
    width: 100%;
}

.starting-rules-form {
    flex: auto;
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    width: 100%;
}

.starting-rules-name-container {
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
    align-items: center;
    margin-bottom: 40px;
}

.starting-rules-players-title,
.starting-rules-cards-title {
  font-size: 2em;
  font-weight: 200;
  letter-spacing: .4px;
  text-transform: uppercase;
}

.starting-rules-players-count-container,
.starting-rules-cards-count-container
 {
    display: flex;
    flex-direction: row;
    margin-left: 10px;
}

.starting-rules-players-count,
.starting-rules-cards-count {
  font-size: 4em;
}

.starting-rules-players-buttons,
.starting-rules-cards-buttons {
    width: 100%;
    display: flex;
    justify-content: center;
    flex-direction: column;
    align-items: center;
    margin-left: 10px;
}

.starting-rules-players-buttons button, 
.starting-rules-cards-buttons button {
    border: none;
    font-size: 17px;
    color: #41905f;
    transition: .1s ease-in-out;
}

.starting-rules-players-buttons button:hover, 
.starting-rules-cards-buttons button:hover {
    font-size: 34px;
}

.starting-rules-options-container {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
  justify-content: space-evenly;
}

.starting-rules-players,
.starting-rules-cards {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

.starting-rules-icons-container {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: left;
}

.starting-rules-icons-cards {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
}

.starting-rules-bottom-icons {
    position: relative;
}

.starting-rules-bottom-icons-card {
    display: inline-flex;
    flex-wrap: wrap;
    flex-direction: row;
    margin-left: 5px;
}

.starting-rules-bottom-icons-cards {
    max-width: 95px;
    margin-top: 20px;
}

[class^="starting-rules-bottom-icons-player"] {
    background: #e6e6e6;
    padding: 9px;
    border-radius: 50%;
}

.starting-rules-bottom-button {
    cursor: pointer;
    border: 0;
    padding: 10px 20px;
    text-transform: uppercase;
    font-size: 3em;
    letter-spacing: .7px;
    font-weight: 800;
    background: #5ece98;
    color: #fff;
    margin-left: auto;
    height: 100%;
    border-left: 5px solid #2a905f;
    width: 10vw;
    transition: .1s ease-in-out;
}

.starting-rules-bottom-button:hover {
    font-size: 5em;
    background: #8dffc8;
}

.starting-button-next {
    height: 100vh;
}


/* ---------- Phase Form ---------- */
.phase-form {
    flex: auto;
    display: flex;
    flex-direction: column;
}

.phase-form-form {
    flex: auto;
}


/* ---------- Win Condition ----------- */
.win-condition {
    flex: auto;
    display: flex;
    flex-direction: column;
}

.win-condition-form {
    flex: auto;
}


/* ---------- Review Game ----------- */
.review-game {
    flex: auto;
    display: flex;
    flex-direction: column;
}

.review-game-content {
    flex: auto;
}

/* ---------- Help Menu --------- */
.documentation-container {
    display: flex;
    flex-direction: row;
    max-height: 70vh;
    margin: 45px 0px;
}

.documentation-menu {
    margin-right: 20px;
    border-right: 2px solid #d0d0d0;
    overflow: auto;
    display: flex;
    min-width: 200px;
    flex-direction: column;
}

.documentation-menu-section {
    border-bottom: 2px solid #d0d0d0
}

.documentation-sub-container {
    font-size: 13px;
    font-weight: 400;
    text-indent: 10px;
}

.documentation-sub-container > .documentation-sub-container {
    text-indent: 20px;
    font-size: 13px;
    font-weight: 300;
}

.documentation {
    overflow: auto;
}


/* ---------- Board ------------ */

/* ---------- Card ------------ */

/* ---------- Deck ------------ */

/* ---------- Player ------------ */

